# circuit

./: Cargo.toml
docs/superpowers/plans/: 2026-06-14-circuit-m1-walking-skeleton.md  2026-06-14-circuit-m2-foundation.md  2026-06-14-circuit-m2a-data-model-dag.md  2026-06-14-circuit-m2b-forge-checkpoints.md  2026-06-14-circuit-m2c-dag-board.md  2026-06-15-circuit-m2-slice-a-git-adapter.md  2026-06-16-circuit-h1-hexagonal-migration.md  2026-06-16-circuit-m2-slice-b-forge-checkpoint.md  2026-06-18-circuit-m2-slice-c-session-archival.md  2026-06-19-circuit-m2-forge-cli-verbs.md  2026-06-20-circuit-impact-blast-radius.md  2026-06-20-circuit-m1_5-structural-comprehension.md  2026-06-22-circuit-m3-slice-a-system-projection.md  2026-06-29-circuit-m3-slice-c-projection-conformance.md  2026-06-29-circuit-map-layered-graph.md  (+1 more)
src/: app.rs  builder.rs  graph.rs  layer.rs  lib.rs  main.rs  ports.rs
src/adapters/: checkpoints.rs  delivery.rs  forge.rs  git.rs  mod.rs  probe.rs  store.rs
src/cockpit/: health.rs  mod.rs  rollup.rs
src/comprehension/: callgraph.rs  impact.rs  layered.rs  mod.rs  scan.rs
src/dag/: mod.rs
src/flow/: facts.rs  mod.rs  rail.rs  stage.rs
src/indicators/: conformance.rs  cycles.rs  dependency_rule.rs  mod.rs
src/lang/: mod.rs  rust.rs
src/model/: config.rs  glossary.rs  local.rs  mod.rs  node.rs  projection.rs  spec.rs  store.rs
src/render/: dag_board.rs  html.rs  mermaid.rs  mod.rs
src/session/: mod.rs
tests/: board.rs  cli.rs  conformance.rs  data_model.rs  forge_checkpoints.rs  projection.rs  session_flow.rs
(+27 files in other folders)
